# pl-librispeech

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  entrypoint.sh  pyproject.toml
data/materials/: dev-trials.txt  test-trials.txt
envs/: run.sh
envs/cpu-standard/: main.tf
envs/gpu-standard/: main.tf
helper/: build.py  build.sh  run.sh
lightning_logs/version_0/: events.out.tfevents.1652007380.meto.127633.0
project/: makeshards.py  readdataset.py
src/: train.py
src/data/: librispeech.py  makeshards.py  maketar.py  maketrials.py  readdataset.py
src/misc/: eer.py
src/model/: aamsoftmax.py  ecapa.py  svmodel.py
